--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ version: '3.3'
       <<: *app
       entrypoint: /opt/app/linter
 
-    test:
+    tester:
       <<: *app
       entrypoint: /opt/app/test
       env_file: ~/.env
