--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     working_directory: ~/cloudlib/
     machine:
-      - image: ubuntu-2004:2022.10.1
+      image: ubuntu-2004:2022.10.1
     steps:
       - checkout
       - run:
