--- a/cicd/build
+++ b/cicd/build
@@ -5,6 +5,8 @@ set -o pipefail
 
 # first we want to specify the build vars
 # and store them in a vars file which we can reference later
+echo
+echo Declare our build vars
 cat >cicd/vars <<EOF
 export BUILD_DATE=$(date +%Y%m%dT%H%M)
 export VCS_REF=$(git describe --abbrev=7 --tags --always)
@@ -12,10 +14,16 @@ export TAG=$(date +%Y%m%d.%H%M)
 export CI_BUILD_URL=${CI_BUILD_URL:-unset}
 EOF
 
+echo
+echo Initialize our build vars
 . cicd/vars
 
 # build the image 
+echo
+echo Build the image
 docker-compose build
 
 # check if image was built successfully
-docker images
+echo
+echo Check image was built successfully
+docker images | grep 'spiffycell/cloudlib'
