--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@
 version: '3.3'
 services:
   cloudlib: &app
-    image: cloudlib 
+    image: spiffycell/cloudlib 
     build:
       context: src/
       args:
